--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-way-of-samurai",
-  "homepage": "https://alisetskii.github.io/SocialNetworkStudy",
+  "homepage": "https://alisetskii.github.io/StudySocialNetwork",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
